crates/core/tests/typescript/snapshots/integration_tests__typescript__import_dependency_ir.snap
---
source: core/tests/typescript/mod.rs
expression: "serde_json::to_string_pretty(&ir).unwrap()"
---
{
  "file_path": "tests/typescript/fixtures/import_dependency.ts",
  "definitions": [
    {
      "name": "someFunction",
      "position": {
        "start_line": 1,
        "start_column": 10,
        "end_line": 1,
        "end_column": 22
      },
      "definition_type": "ImportDefinition"
    },
    {
      "name": "result",
      "position": {
        "start_line": 2,
        "start_column": 7,
        "end_line": 2,
        "end_column": 13
      },
      "definition_type": "VariableDefinition"
    }
  ],
  "dependencies": [
    {
      "source_line": 2,
      "target_line": 1,
      "symbol": "someFunction",
      "dependency_type": "VariableUse",
      "context": "variable_use"
    }
  ],
  "usage": [
    {
      "name": "someFunction",
      "kind": "Identifier",
      "position": {
        "start_line": 1,
        "start_column": 10,
        "end_line": 1,
        "end_column": 22
      }
    },
    {
      "name": "someFunction()",
      "kind": "CallExpression",
      "position": {
        "start_line": 2,
        "start_column": 16,
        "end_line": 2,
        "end_column": 30
      }
    },
    {
      "name": "someFunction",
      "kind": "Identifier",
      "position": {
        "start_line": 2,
        "start_column": 16,
        "end_line": 2,
        "end_column": 28
      }
    }
  ],
  "analysis_metadata": {
    "language": "TypeScript",
    "total_lines": 2,
    "analysis_timestamp": "now",
    "lintric_version": "0.1.0"
  }
}
