crates/core/tests/typescript/snapshots/integration_tests__typescript__typescript_basic_ir.snap
---
source: crates/core/tests/typescript/mod.rs
expression: ir_snapshot_content
---
Source Code:
const x = 1;
let y = x + 2;
function foo() {
    return y;
}

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (identifier "x")
      value: (number "1")
    )
  )
  (lexical_declaration
    (variable_declarator
      name: (identifier "y")
      value: (binary_expression
        left: (identifier "x")
        right: (number "2")
      )
    )
  )
  (function_declaration
    name: (identifier "foo")
    parameters: (formal_parameters)
    body: (statement_block
      (return_statement
        (identifier "y")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "tests/typescript/fixtures/basic_typescript_code.ts",
    definitions: [
        Definition {
            name: "x",
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 8,
            },
            definition_type: VariableDefinition,
        },
        Definition {
            name: "y",
            position: Position {
                start_line: 2,
                start_column: 5,
                end_line: 2,
                end_column: 6,
            },
            definition_type: VariableDefinition,
        },
        Definition {
            name: "foo",
            position: Position {
                start_line: 3,
                start_column: 10,
                end_line: 3,
                end_column: 13,
            },
            definition_type: FunctionDefinition,
        },
    ],
    dependencies: [
        Dependency {
            source_line: 2,
            target_line: 1,
            symbol: "x",
            dependency_type: VariableUse,
            context: Some(
                "variable_use",
            ),
        },
        Dependency {
            source_line: 4,
            target_line: 2,
            symbol: "y",
            dependency_type: VariableUse,
            context: Some(
                "variable_use",
            ),
        },
    ],
    usage: [
        Usage {
            name: "x",
            kind: Identifier,
            position: Position {
                start_line: 2,
                start_column: 9,
                end_line: 2,
                end_column: 10,
            },
        },
        Usage {
            name: "y",
            kind: Identifier,
            position: Position {
                start_line: 4,
                start_column: 12,
                end_line: 4,
                end_column: 13,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 5,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
